# logrd

./: .hgtags  Makefile.am  NEWS  README  README.md  configure.ac  create_am_macros.mk  inst_vars.mk  logrd.bash  mstbuild.cfg
m4/: mst_bats.m4
src/: Makefile.am  logrd.bash  logrd.pod  pod_all.mk  pod_html.mk  pod_man.mk  pod_readme.mk  pod_readme_md.mk
tests/: Makefile.am  bats.mk  functions.bash  logging.bats  options.bats  streams.bats
